@@ -44,14 +44,6 @@ extern int usewindow;
 
 extern int loadfile;
 
-/* Globale Referenz zu Java environment. Diese wird in der Regel auch lokal zu den 
-   JNICALL routinen übergeben, jedoch benötigt der Crash-Randler eine möglichst aktuelle
-   Referenz. Und zwar diese aus dem UI thread. Wir ermitteln diese am Anfang bei OnLoad und hoffen,
-   dass sie sich im laufe des Programmablaufs nicht ändert.
-   Zur Sicherheit speichern wir die env-Referenz bei jeder Bildschirmausgabe nochmal neu an. Das ist aber
-   dennoch nicht wirklich sicher....*/
-
-static JNIEnv *globalenv;   /*Java environment*/
 static JavaVM *m_vm;
 static jobject x11basicActivity=NULL;
 static jobject x11basicView=NULL;
@@ -101,42 +93,43 @@ static int ringbufout(char *d,int n);
 
 JNIEXPORT  jint JNI_OnLoad(JavaVM* vm, void* reserved) {
   jclass cls, godcls;
+  JNIEnv *env;
   NLOG("OnLoad.");
 
   /* Globale Referenz um Java Environment ermitteln und abspeichern. Wird bei SIGNAL Handler benötigt, 
      da dieser dies sonst nicht ermitteln kann und dann auch nicht den Crash-Handler starten kann.
    */
   
-  if((*vm)->GetEnv(vm, (void **)&globalenv, JNI_VERSION_1_4)) return JNI_ERR; /* JNI version not supported */
+  if((*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_4)) return JNI_ERR; /* JNI version not supported */
   m_vm = vm;
 
-  cls=(*globalenv)->FindClass(globalenv,"net/sourceforge/x11basic/X11basicView"); 
+  cls=(*env)->FindClass(env,"net/sourceforge/x11basic/X11basicView"); 
   if (cls == NULL) return JNI_ERR;
-  godcls=(*globalenv)->FindClass(globalenv,"net/sourceforge/x11basic/X11BasicActivity"); 
+  godcls=(*env)->FindClass(env,"net/sourceforge/x11basic/X11BasicActivity"); 
   if (godcls == NULL) return JNI_ERR;
   
   
   /* Referenzen zu den Java-Proceduren ermitteln und abspeichern.*/
   
-  nativeCrashed      =(*globalenv)->GetMethodID(globalenv,cls, "nativeCrashed", "(I)V");
-  redrawMethod       =(*globalenv)->GetMethodID(globalenv,cls, "redraw",        "()V");
+  nativeCrashed      =(*env)->GetMethodID(env,cls, "nativeCrashed", "(I)V");
+  redrawMethod       =(*env)->GetMethodID(env,cls, "redraw",        "()V");
   
-  beepMethod         =(*globalenv)->GetMethodID(globalenv,cls, "beep",          "()V");
-  getlocationMethod  =(*globalenv)->GetMethodID(globalenv,cls, "get_location",  "()V");
-  playsoundfileMethod=(*globalenv)->GetMethodID(globalenv,cls, "playsoundfile", "(Ljava/lang/String;)V");
-  runaudioMethod     =(*globalenv)->GetMethodID(globalenv,cls, "RunAudioThreads","()V");
-  playtoneMethod     =(*globalenv)->GetMethodID(globalenv,cls, "playtone",      "(FFI)V");
-  speekMethod        =(*globalenv)->GetMethodID(globalenv,cls, "speek",         "(Ljava/lang/String;FFI)V");
-  gpsonoffMethod     =(*globalenv)->GetMethodID(globalenv,cls, "gps_onoff",     "(I)V");
-  sensoronoffMethod  =(*globalenv)->GetMethodID(globalenv,cls, "sensor_onoff",  "(I)V");
-  callintentMethod   =(*globalenv)->GetMethodID(globalenv,cls, "call_intent",   "(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V");
+  beepMethod         =(*env)->GetMethodID(env,cls, "beep",	    "()V");
+  getlocationMethod  =(*env)->GetMethodID(env,cls, "get_location",  "()V");
+  playsoundfileMethod=(*env)->GetMethodID(env,cls, "playsoundfile", "(Ljava/lang/String;)V");
+  runaudioMethod     =(*env)->GetMethodID(env,cls, "RunAudioThreads","()V");
+  playtoneMethod     =(*env)->GetMethodID(env,cls, "playtone",      "(FFI)V");
+  speekMethod        =(*env)->GetMethodID(env,cls, "speek",	    "(Ljava/lang/String;FFI)V");
+  gpsonoffMethod     =(*env)->GetMethodID(env,cls, "gps_onoff",     "(I)V");
+  sensoronoffMethod  =(*env)->GetMethodID(env,cls, "sensor_onoff",  "(I)V");
+  callintentMethod   =(*env)->GetMethodID(env,cls, "call_intent",   "(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V");
 
   
   
   
   /* Use weak global ref to allow C class to be unloaded */
 
-  // mcls = (*globalenv)->NewWeakGlobalRef(globalenv, cls);
+  // mcls = (*env)->NewWeakGlobalRef(env, cls);
   // if(mcls==NULL) return JNI_ERR;
 
   // Try to catch crashes...
@@ -186,11 +179,9 @@ JNIEXPORT  jint JNI_OnLoad(JavaVM* vm, void* reserved) {
   Programm geladen. 
 */
 
-#define CHECKENV() if(globalenv!=env) {NLOG("/#/");}
 
 JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_Init(JNIEnv *env, jobject _obj, jlong  time_ms, jstring arguments) {
   static char *commandline=NULL;
-  CHECKENV();
   param_anzahl=0;
   if(!param_argumente) param_argumente=(char **)malloc(128*sizeof(char *));
   NLOG("vInit.");
@@ -252,7 +243,6 @@ JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_Init(JNIEnv *e
 JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_InitScreen(JNIEnv *env, jobject  obj, jobject bitmap) {
     int                ret;
     static int         init=0; 
-    CHECKENV();
     NLOG("i.");
     if ((ret = AndroidBitmap_getInfo(env, bitmap, &screen_info)) < 0) {
         LOGE("AndroidBitmap_getInfo() failed ! error=%d", ret);
@@ -283,15 +273,12 @@ JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_InitScreen(JNI
 
 JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_setObject(JNIEnv *env, jobject  obj, jobject _x11basicView) {
   NLOG("setObject.");
-  CHECKENV();
-  globalenv=env;   /* Vielleicht nicht nötig ?*/
   if(x11basicView) (*env)->DeleteGlobalRef(env,x11basicView);
   x11basicView = (*env)->NewGlobalRef(env, _x11basicView);
 }
 JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_setHomeDir(JNIEnv *env, jobject  obj, jstring in) {
   const char *n = (*env)->GetStringUTFChars(env,in, 0);
   NLOG("setHomeDir.");
-  CHECKENV();
   chdir(n);
   (*env)->ReleaseStringUTFChars(env,in, n);
 }
@@ -302,16 +289,12 @@ JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_terminalfontsi
 
 JNIEXPORT jstring JNICALL Java_net_sourceforge_x11basic_X11basicView_Stdout(JNIEnv *env, jobject  obj) {
   NLOG("Stdout.");
-  CHECKENV();
-  globalenv=env;  /* Vielleicht nicht nötig */
   fflush(stdout);
   return  (*env)->NewStringUTF(env,flush_terminal());
 }
 JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_Stdin(JNIEnv *env, jobject  obj, jstring in) {
   const char *n = (*env)->GetStringUTFChars(env,in, 0);    //Get the native string from javaString
   NLOG("Stdin.");
-  CHECKENV();
-  globalenv=env;  /* Vielleicht nicht nötig */
   if(android_init) write(in_pipe[1],n,strlen(n));
   (*env)->ReleaseStringUTFChars(env,in, n);                //DON'T FORGET THIS LINE!!!
 }
@@ -322,8 +305,6 @@ JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_queueKeyEvent(
 }
 JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_Putchar(JNIEnv *env, jobject  obj, jint n) {
   NLOG("p.");
-  CHECKENV();
-  globalenv=env;  /* Vielleicht nicht nötig */
   char nn=(char)n;
   NLOG("p.");
   write(in_pipe[1],&nn,1);
@@ -351,7 +332,6 @@ JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_setLocation(JN
 JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_setLocationInfo(JNIEnv *env, jobject  obj, 
   jfloat bar,jfloat acu,jfloat speed,jlong time, jstring prov) {
   NLOG("setLocationInfo.");
-  CHECKENV();
   gps_bearing=(double)bar;
   gps_accuracy=(double)acu;
   gps_speed=(double)speed;
@@ -369,7 +349,6 @@ JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_setLocationInf
 JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_setSensorValues(
   JNIEnv *env, jobject  obj, jint offset,jint nval,jfloat a0,jfloat a1,jfloat a2) {
   NLOG("setSensorValues."); 
-  CHECKENV();
   if(nval>=1) sensordata[offset]=(double)a0;
   if(nval>=2) sensordata[offset+1]=(double)a1;
   if(nval>=3) sensordata[offset+2]=(double)a2;
@@ -379,7 +358,6 @@ JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_SetMouse(JNIEn
  // char lbuf[100];
   XEvent e;
   NLOG("setM{");
-  CHECKENV();
   if(k==0) {
     e.type=ButtonPress;
     e.xbutton.button=1;
@@ -422,7 +400,6 @@ JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_SetMouse(JNIEn
 JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_SetMouseMotion(JNIEnv *env, jobject  obj, jint dx,jint dy) {
   NLOG("setMM{");
   XEvent e;
-  CHECKENV();
   e.type=MotionNotify;
   e.xmotion.x=screen.mouse_x+dx;
   e.xmotion.y=screen.mouse_y+dy;
@@ -435,7 +412,6 @@ JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_SetMouseMotion
 JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_SetKeyPressEvent(JNIEnv *env, jobject  obj, jint kk,jint a, jint hi) {
   NLOG("kpe."); 
   XEvent e;
-  CHECKENV();
   e.type=KeyPress;
   e.xkey.keycode=(char)kk;
   e.xkey.ks=a&255|(hi<<8);
@@ -447,7 +423,6 @@ JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_SetKeyPressEve
 JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_SetKeyReleaseEvent(JNIEnv *env, jobject  obj, jint kk,jint a, jint hi) {
   NLOG("kre.");
   XEvent e;
-  CHECKENV();
   e.type=KeyRelease;
   e.xkey.keycode=(char)kk;
   e.xkey.ks=a&255|(hi<<8);
@@ -458,7 +433,6 @@ JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_SetKeyReleaseE
 
 JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_AudioFillStreamBuffer(JNIEnv *env, void* reserved, jshortArray location, jint size) {
   NLOG("audio{");
-  CHECKENV();
   /* Get the short* pointer from the Java array  */
   jboolean isCopy = JNI_TRUE;
   jshort* dst = (*env)->GetShortArrayElements(env,location, &isCopy);
@@ -497,7 +471,6 @@ JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_StopCont(JNIEn
 }
 JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_Stop(JNIEnv *env, jobject  obj) {
   NLOG("Stop.");
-  CHECKENV();
   puts("** PROGRAM-STOP");
   c_stop();
 }
@@ -515,7 +488,6 @@ static void send_terminate_event() {
 
 JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_Load(JNIEnv *env, jobject  obj, jstring filename) {
   NLOG("Load.");
-  CHECKENV();
   const char *n = (*env)->GetStringUTFChars(env,filename, 0);
   strcpy(ifilename,n);
   if(exist(ifilename)) {
@@ -541,7 +513,6 @@ JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_Run(JNIEnv *en
 }
 JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_Loadandrun(JNIEnv *env, jobject  obj, jstring filename) {
   NLOG("Load+run.");
-  CHECKENV();
   const char *n = (*env)->GetStringUTFChars(env,filename, 0);
   strcpy(ifilename,n);
   if(exist(ifilename)) {
@@ -560,10 +531,11 @@ JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_Loadandrun(JNI
   (*env)->ReleaseStringUTFChars(env,filename,n);
 }
 
+/* Diese Funktion wird von einem eigenen Thread gestartet (RunThread.java)
+und hat deshalb auch einen eigenen Context (env).*/
+
 JNIEXPORT void JNICALL Java_net_sourceforge_x11basic_X11basicView_Programmlauf(JNIEnv *env, jobject _obj) {
   NLOG("Programmlauf.");
-  CHECKENV();
-  globalenv=env;
 #if 0
   /* Das ganze sollte in eigenem Thread gestartet werden.  */
   pthread_t thread1;
@@ -587,8 +559,6 @@ JNIEXPORT jint JNICALL Java_net_sourceforge_x11basic_X11basicView_Compile(JNIEnv
   bcpc.pointer=malloc(MAX_CODE);
   int status=0;
   NLOG("Compile{");
-  CHECKENV();
-  globalenv=env;
   if(prglen>0) {
         int ret;
         const char *ofilename = (*env)->GetStringUTFChars(env,filename, 0);
@@ -791,15 +761,20 @@ void invalidate_screen() {
 void android_sigaction(int signum, siginfo_t *info, void *reserved) {
   NLOG(">~.");
   LOGE("Signal received.... CRASH");
-  char buf[MAXSTRLEN+sizeof(int)];
-  ringbufout(buf,MAXSTRLEN);
-  *((int *)(&buf[MAXSTRLEN]))=signum;
-  bsave("x11basic.crash",buf,sizeof(buf));
-  if(nativeCrashed == NULL) {LOGE("Error: Can't find Java method ()");} 
-  else {
-    /* Hier muessen wir uns drauf verlassen, dass globalenv noch gueltig ist.*/
-    (*globalenv)->CallVoidMethod(globalenv,x11basicView, nativeCrashed,signum);
-    (*globalenv)->ExceptionClear(globalenv);
+  
+  JNIEnv *env;
+  int status = (*m_vm)->AttachCurrentThread(m_vm,&env, NULL);
+  if(status<0) {
+    LOGE("ERROR: no env. dangling thread?");
+    char buf[MAXSTRLEN+sizeof(int)];
+    ringbufout(buf,MAXSTRLEN);
+    *((int *)(&buf[MAXSTRLEN]))=signum;
+    bsave("x11basic.crash",buf,sizeof(buf));
+  } else if(nativeCrashed == NULL) {
+    LOGE("Error: Can't find Java method for crash handler.");
+  } else {
+    (*env)->CallVoidMethod(env,x11basicView, nativeCrashed,signum);
+    (*env)->ExceptionClear(env);
   }
   signal(signum,(sighandler_t)android_sigaction);
   old_sa[signum].sa_handler(signum);
