@@ -15,3 +15,4 @@ Release notes for Version 1.24 (Sept 2015 -- )
 - fixed subarry assignment
 - improved DUMP, added DUMP c$,#n, also PLIST #n
 - fixed Crash (SIGABRT) in Android version.
+- fixed Crashhandler (Android)
